--- a/src/component/Css/CartPage.css
+++ b/src/component/Css/CartPage.css
@@ -3,20 +3,28 @@
     padding: 0;
     box-sizing: border-box;
 }
-.cart-container{
+
+.cart-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    background-color: rgb(253, 247, 247);
+    padding: 20px;
+    z-index: 1000;
+    border-radius: 8px;
     vertical-align: middle;
-    width: 45%;
-    background: #fff;
-    text-align: left;
-    padding: 5px 20px 20px;
-    margin: auto;
-    box-shadow: 5px 5px 5px 5px #cac9c9;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+  
 .cart{
     display: flex;
     justify-content: space-between;
     padding: 10px;
 }
+
 .cart button{
     border: none;
     background-color: white;
@@ -39,6 +47,7 @@
 .cart-item .cart-item-img img{
     width: 100%;
 }
+
 .cart-item .cart-item-name{
     width: 60%;
     height: 100px;
@@ -72,3 +81,18 @@
     margin: 10px 45px;
     padding: 8px;
 }
+
+.fa-times {
+    cursor: pointer;
+}
+  
+.cart-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+  
