--- a/src/component/Css/CartPage.css
+++ b/src/component/Css/CartPage.css
@@ -1,98 +1,40 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-.cart-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    max-width: 600px;
-    background-color: rgb(253, 247, 247);
-    padding: 20px;
-    z-index: 1000;
-    border-radius: 8px;
-    vertical-align: middle;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-  
-.cart{
+.cart-container1{
+    width: 90%;
+    margin: 100px auto;
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+.cart-container-img{
+    width: 45%;
 }
 
-.cart button{
-    border: none;
-    background-color: white;
-    font-size: 30px;
-}
-.cart-item{
-    display: flex;
-    padding-bottom: 10px;
-    border-top: 1px solid rgb(233, 229, 229);
-    gap: 1.5em;
-    padding-top: 10px;
-}
-.cart-item .cart-item-img{
-    width: 20%;
-    height: 100px;
-    background-color: rgb(208, 223, 236);
-    border-radius: 10px;
-    padding: 3px;
-}
-.cart-item .cart-item-img img{
-    width: 100%;
+.cart-container-img img{
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  padding: auto;
+  text-align: center;
+  width: 100%;
 }
 
-.cart-item .cart-item-name{
-    width: 60%;
-    height: 100px;
-    color: black;
-    text-transform: capitalize;
+.cart-container-context{
+    text-align: center;
+    align-items: center;
+    width: 40%;
 }
-.cart-item .icons{
-    float: right;
-    color: red;
-}
-.cart-item-price{
-    color: #ffbe33;
-    font-size: 20px;
-    letter-spacing: 1px;
-}
-.cart-total{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid rgb(233, 229, 229);
-    border-top: 1px solid rgb(233, 229, 229);
-    padding: 5px;
-    padding-bottom: 0;
-}
-.cart-container .order-btn{
-    width: 80%;
-    border: none;
+.cart-container-context button{
     background-color: #ffbe33;
+    border: none;
+    padding: 8px 80px;
     color: white;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 10px 45px;
-    padding: 8px;
-}
-
-.fa-times {
-    cursor: pointer;
-}
-  
-.cart-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    font-weight: 800;
 }
   
