--- a/src/component/Css/Checkout.css
+++ b/src/component/Css/Checkout.css
@@ -1,17 +1,29 @@
 .checkout-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 900px;
+    background-color: rgb(253, 247, 247);
     padding: 20px;
-    width: 50%;
-    margin: auto;
+    z-index: 1000;
+    border-radius: 8px;
     vertical-align: middle;
-    background: #fff;
-    text-align: left;
-    padding: 5px 20px 20px;
-    margin: auto;
-    box-shadow: 5px 5px 5px 5px #cac9c9;
-  }
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.checkout-container-form{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
   
 .checkout-form {
-    width: 100%;
+    width: 75%;
+    padding: 10px;
+}
+.delivery-form{
     padding: 10px;
 }
 
@@ -23,7 +35,7 @@ h2 {
 .input-field {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 9px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -36,12 +48,24 @@ h2 {
     width: 48%;
 }
 
-.apply-btn {
+.checkout-container-order{
+    width: 70%;
+    margin: auto;
+}
+.checkout-container-order button{
     width: 100%;
     padding: 10px;
     margin-top: 10px;
-    background-color: #ccc;
+    background-color: #ffbe33;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.error-message{
+    color: red;
+    padding: 0;
 }
