--- a/src/component/Css/HomePage.css
+++ b/src/component/Css/HomePage.css
@@ -235,7 +235,6 @@ body {
 .options h6 {
     font-size: 22px;
     color: white;
-    /* margin-right: 10px; */
 }
 .options .cart-btn{
     background-color: #f8b400;
@@ -244,7 +243,6 @@ body {
     border-radius: 50%;
 }
 
-/* Media Queries */
 @media (max-width: 768px) {
     .container {
         width: 95%;
@@ -259,4 +257,25 @@ body {
     }
 }
 
-  
+.about_section {
+    background-color: #222831;
+    margin: 80px 0;
+    padding: 70px 0;
+    align-items: center;
+}
+.img-box1{
+    float: right;
+}
+.detail-box1{
+    color: white;
+   padding-top: 90px;
+}
+.detail-box1 .heading_container1{
+    color: white;
+    position: relative;
+    margin-bottom: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Dancing Script', cursive;
+}
+   
